(include_subdirs unqualified)

(library
 (name servois2)
 (public_name servois2)
 (libraries unix str yaml)
 (modules (:standard \ run))
 ;(preprocess (per_module
 ;   ((pps ppx_deriving_yaml) yaml_generator)))
 (wrapped false)
 ;(library_flags -linkall)
 (synopsis "Servois"))

(executable
 (name run)
 (public_name servois2run)
 (modules run)
 (libraries servois2)
 (promote (until-clean)))

(env
 (dev
  (flags (:standard -warn-error -A -w -27-33 ))))
