(include_subdirs unqualified)

(library
 (name servois2)
 (public_name servois2)
 (libraries unix str yaml zarith)
 (modules (:standard \ run))
 (wrapped true)
 (synopsis "Servois"))

(ocamllex smt_lexer)

(menhir
 (modules smt_parser)
 (flags (--explain)))
(env
 (dev
  (flags (:standard -warn-error -A -w -27-33 ))))


(executable
 (name run)
 (public_name servois2run)
 (modules run)
 (libraries servois2)
 (promote (until-clean)))
